--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
   <title>TO-DO PHP</title>
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <ul>
+        <input>
+        <button>
+          Buscar
+        </button>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h1>TO-DO PHP</h1>
+      <form>
+        <input>
+        <button>
+          Agregar
+        </button>
+      </form>
+      <ul>
+        <li>
+          <input>
+          <button>
+            Editar
+          </button>
+          <button>
+            Eliminar
+          </button>
+        </li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
